package com.jtech.JtechApp.orden.enums;

public enum EstadoOrden {
    PENDIENTE,
    PROCESANDO,
    ENVIADO,
    ENTREGADO,
    CANCELADO
}