package com.jtech.JtechApp.usuario.enums;

public enum NivelAdmin {
    SUPER_ADMIN, ADMIN
}
